# uk-schools-mcp

./: .gitignore  NEXT_STEPS.md  README.md  pyproject.toml
src/uk_schools_mcp/: __init__.py  server.py
src/uk_schools_mcp/clients/: __init__.py  ees.py  gias.py  ofsted.py  postcodes.py  school_finder.py
tests/: test_server.py
